--- a/project/sandpit/index.html
+++ b/project/sandpit/index.html
@@ -2,4 +2,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <div id='viz'></div>
-<script type="text/javascript" src="script.js" async></script>
+<!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
+<script src="../static/libs/d3.min.js"></script>
+<script type="text/javascript" src="script-01.js" async></script>
+<script type="text/javascript" src="script-02-using-d3.js" async></script>
+<script type="module" src="script-03-module-imports.mjs" async></script>
