--- a/project/js-sandpit/index.html
+++ b/project/js-sandpit/index.html
@@ -7,3 +7,5 @@
 <script type="text/javascript" src="script-01.js" async></script>
 <script type="text/javascript" src="script-02-using-d3.js" async></script>
 <script type="module" src="script-03-module-imports.mjs" async></script>
+<script type="text/javascript" src="script-04-obsolete-modular-pattern.js" async></script>
+<script type="text/javascript" src="script-05-data-processing.js" async></script>
