--- a/project/js-sandpit/index.html
+++ b/project/js-sandpit/index.html
@@ -4,8 +4,9 @@
 <div id='viz'></div>
 <!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
 <script src="../static/libs/d3.min.js"></script>
-<script type="text/javascript" src="script-01.js" async></script>
-<script type="text/javascript" src="script-02-using-d3.js" async></script>
-<script type="module" src="script-03-module-imports.mjs" async></script>
-<script type="text/javascript" src="script-04-obsolete-modular-pattern.js" async></script>
-<script type="text/javascript" src="script-05-data-processing.js" async></script>
+<script type="text/javascript" src="script-01.js"></script>
+<script type="text/javascript" src="script-02-using-d3.js"></script>
+<script type="module" src="script-03-module-imports.mjs"></script>
+<script type="text/javascript" src="script-04-obsolete-modular-pattern.js"></script>
+<script type="text/javascript" src="script-05-data-processing.js"></script>
+<script type="text/javascript" src="script-06-numbers.js"></script>
