--- a/project/js-sandpit/index.html
+++ b/project/js-sandpit/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <div id='viz'></div>
-<!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
-<script src="../static/libs/d3.min.js"></script>
+<script src="http://d3js.org/d3.v7.min.js"></script>
 <script type="text/javascript" src="script-01.js"></script>
 <script type="text/javascript" src="script-02-using-d3.js"></script>
 <script type="module" src="script-03-module-imports.mjs"></script>
