--- a/project/js-sandpit/index.html
+++ b/project/js-sandpit/index.html
@@ -2,10 +2,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <div id='viz'></div>
-<script src="http://d3js.org/d3.v7.min.js"></script>
-<script type="text/javascript" src="script-01.js"></script>
-<script type="text/javascript" src="script-02-using-d3.js"></script>
-<script type="module" src="script-03-module-imports.mjs"></script>
-<script type="text/javascript" src="script-04-obsolete-modular-pattern.js"></script>
-<script type="text/javascript" src="script-05-data-processing.js"></script>
-<script type="text/javascript" src="script-06-numbers.js"></script>
+<!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
+<script src="/static/libs/d3.v7.min.js"></script>
+<script type="text/javascript" src="example-01.js"></script>
+<script type="text/javascript" src="example-02-using-d3.js"></script>
+<script type="module" src="example-03-module-imports.mjs"></script>
+<script type="text/javascript" src="example-04-obsolete-modular-pattern.js"></script>
+<script type="text/javascript" src="example-05-data-processing.js"></script>
+<script type="text/javascript" src="example-06-numbers.js"></script>
+<script type="text/javascript" src="example-07-js-objects-like-dict.js"></script>
+<script type="text/javascript" src="example-08-functions.js"></script>
+<script type="text/javascript" src="example-09-iterations.js"></script>
