--- a/project/js-sandbox/index.html
+++ b/project/js-sandbox/index.html
@@ -14,3 +14,4 @@
 <script type="text/javascript" src="example-08--functions.js"></script>
 <script type="text/javascript" src="example-09--iterations.js"></script>
 <script type="text/javascript" src="example-10--conditionals.js"></script>
+<script type="text/javascript" src="example-12--prototypes.js"></script>
