--- a/project/js-sandbox/index.html
+++ b/project/js-sandbox/index.html
@@ -15,3 +15,4 @@
 <script type="text/javascript" src="example-09--iterations.js"></script>
 <script type="text/javascript" src="example-10--conditionals.js"></script>
 <script type="text/javascript" src="example-12--prototypes.js"></script>
+<script type="text/javascript" src="example-13--destructuring-assignment.js"></script>
