--- a/project/js-sandbox/index.html
+++ b/project/js-sandbox/index.html
@@ -16,3 +16,7 @@
 <script type="text/javascript" src="example-10--conditionals.js"></script>
 <script type="text/javascript" src="example-12--prototypes.js"></script>
 <script type="text/javascript" src="example-13--destructuring-assignment.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-umd-min.js"></script>-->
+<script src="/static/libs/underscore-umd-min.js"></script>
+<script type="text/javascript" src="example-14--underscore-lib.js"></script>
+<script type="text/javascript" src="example-15--functional-methods.js"></script>
