--- a/project/js-sandbox/index.html
+++ b/project/js-sandbox/index.html
@@ -20,3 +20,4 @@
 <script src="/static/libs/underscore-umd-min.js"></script>
 <script type="text/javascript" src="example-14--underscore-lib.js"></script>
 <script type="text/javascript" src="example-15--functional-methods.js"></script>
+<script type="text/javascript" src="example-16--closures.js"></script>
