--- a/project/js-sandbox/index.html
+++ b/project/js-sandbox/index.html
@@ -21,3 +21,4 @@
 <script type="text/javascript" src="example-14--underscore-lib.js"></script>
 <script type="text/javascript" src="example-15--functional-methods.js"></script>
 <script type="text/javascript" src="example-16--closures.js"></script>
+<script type="text/javascript" src="example-17--date.js"></script>
