--- a/project/sandbox/index.html
+++ b/project/sandbox/index.html
@@ -4,21 +4,21 @@
 <div id='viz'></div>
 <!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
 <script src="/static/libs/d3.v7.min.js"></script>
-<script type="text/javascript" src="example-01.js"></script>
-<script type="text/javascript" src="example-02--using-d3.js"></script>
-<script type="module" src="example-03--module-imports.mjs"></script>
-<script type="text/javascript" src="example-04--obsolete-modular-pattern.js"></script>
-<script type="text/javascript" src="example-05--data-processing.js"></script>
-<script type="text/javascript" src="example-06--numbers.js"></script>
-<script type="text/javascript" src="example-07--js-objects-like-dict.js"></script>
-<script type="text/javascript" src="example-08--functions.js"></script>
-<script type="text/javascript" src="example-09--iterations.js"></script>
-<script type="text/javascript" src="example-10--conditionals.js"></script>
-<script type="text/javascript" src="example-12--prototypes.js"></script>
-<script type="text/javascript" src="example-13--destructuring-assignment.js"></script>
+<script type="text/javascript" src="js-example-01.js"></script>
+<script type="text/javascript" src="js-example-02--using-d3.js"></script>
+<script type="module" src="js-example-03--module-imports.mjs"></script>
+<script type="text/javascript" src="js-example-04--obsolete-modular-pattern.js"></script>
+<script type="text/javascript" src="js-example-05--data-processing.js"></script>
+<script type="text/javascript" src="js-example-06--numbers.js"></script>
+<script type="text/javascript" src="js-example-07--js-objects-like-dict.js"></script>
+<script type="text/javascript" src="js-example-08--functions.js"></script>
+<script type="text/javascript" src="js-example-09--iterations.js"></script>
+<script type="text/javascript" src="js-example-10--conditionals.js"></script>
+<script type="text/javascript" src="js-example-12--prototypes.js"></script>
+<script type="text/javascript" src="js-example-13--destructuring-assignment.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-umd-min.js"></script>-->
 <script src="/static/libs/underscore-umd-min.js"></script>
-<script type="text/javascript" src="example-14--underscore-lib.js"></script>
-<script type="text/javascript" src="example-15--functional-methods.js"></script>
-<script type="text/javascript" src="example-16--closures.js"></script>
-<script type="text/javascript" src="example-17--date.js"></script>
+<script type="text/javascript" src="js-example-14--underscore-lib.js"></script>
+<script type="text/javascript" src="js-example-15--functional-methods.js"></script>
+<script type="text/javascript" src="js-example-16--closures.js"></script>
+<script type="text/javascript" src="js-example-17--date.js"></script>
