--- a/project/sandbox/page-1.html
+++ b/project/sandbox/page-1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css" type="text/css" />
-<style>
-    #my-viz { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
-    #lead { font-size: 150%; }
-    .alert { color:red; background:yellow }
-    #special-alert { background:yellow; color:black }
-</style>
+<link rel="stylesheet" href="style-1.css" type="text/css"/>
+<!--<style>-->
+<!--    #my-viz { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }-->
+<!--    #lead { font-size: 150%; }-->
+<!--    .alert { color:red; background:yellow }-->
+<!--    #special-alert { background:yellow; color:black }-->
+<!--</style>-->
 <body>
     <!-- page content -->
     <h2>A Level-2 Header</h2>
@@ -20,8 +20,8 @@
         </div>
     </div>
     <div id="inline-examples">
-        <img src="path/to/image.png" id="prettypic">
-            <p>This is a <a href="link-url">link</a> to
+        <img src="images/dale.png" id="dale">
+            <p>This is a <a href="https://www.amazon.de/Data-Visualization-Python-JavaScript-English-ebook/dp/B0BPF4H7FZ">link</a> to
                 <span class="url">link-url</span>
             </p>
     </div>
