--- a/project/sandbox/page-3--flex.html
+++ b/project/sandbox/page-3--flex.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style-6--full-flex.css" type="text/css"/>
+<link rel="stylesheet" href="style-10--flex-08--justify-content--space-between.css" type="text/css"/>
 <body>
     <div class="container" id="top-container">
         <div class="box" id="box1">box 1</div>
