--- a/project/sandbox/page-1.html
+++ b/project/sandbox/page-1.html
@@ -4,8 +4,8 @@
 <!--<style>-->
 <!--    #my-viz { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }-->
 <!--    #lead { font-size: 150%; }-->
-<!--    .alert { color:red; background:yellow }-->
-<!--    #special-alert { background:yellow; color:black }-->
+<!--    .alert { color:red; background:yellow !important; }-->
+<!--    #special-alert { background:yellow; color:black; }-->
 <!--</style>-->
 <body>
     <!-- page content -->
