--- a/project/sandbox/static-viz/index.html
+++ b/project/sandbox/static-viz/index.html
@@ -21,6 +21,7 @@
             <div class="chart-wrapper" id="by-country">
                 <div class="chart">
                     <img src="images/country_relative_prize_numbers.png" alt="">
+<!--                    <img src="https://www.dropbox.com/s/n6rfr9kvuvir7gi/country_relative_prize_numbers.png?raw=1" alt="">-->
                 </div>
                 <div class="chart">
                     <img src="images/country_relative_prize_numbers.svg"  alt="">
