--- a/project/sandbox/plotly-viz/embedding/index.html
+++ b/project/sandbox/plotly-viz/embedding/index.html
@@ -1,6 +1,6 @@
 <div class="main">
     <h1 class='title'>The Nobel Prize</h1>
-    <h2>From notebook to the web with Plotly</h2>
+    <h2>To the web with Plotly</h2>
         <div class="intro">
             <p>
                 Some nuggets of data mined [...]
