--- a/project/sandbox/plotly-viz/embedding/index.html
+++ b/project/sandbox/plotly-viz/embedding/index.html
@@ -20,6 +20,5 @@
             </div>
         </div>
 </div>
-<script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: \'local\'};</script>
 <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
-<script type="text/javascript" src="plotly_charts.js"></script>
+<script src="plotly_charts.js"></script>
