--- a/project/sandbox/plotly-viz/native-js-charts/index.html
+++ b/project/sandbox/plotly-viz/native-js-charts/index.html
@@ -9,16 +9,17 @@
         <div class="container">
             <div class="info-box">
                 <p>
-                    This chart shows the cumulative Nobel Prize wins by region, taking the
-                    two or three highest winning countries from each.[...]
+                    This chart shows the cumulative Nobel Prize wins by [...]
                 </p>
             </div>
 
             <div class="chart-wrapper">
-                <div class='chart' id='gender-award_age'></div>
+<!--                <div class='chart' id='gender-award_age'></div>-->
+                <div class='chart' id='gender-category'></div>
             </div>
         </div>
 </div>
 <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
 <script src="../../../static/libs/d3.v7.min.js"></script>
-<script src="script.js"></script>
+<!--<script src="script-1.js"></script>-->
+<script src="script-2.js"></script>
