--- a/project/sandbox/index.html
+++ b/project/sandbox/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="js-example-08--functions.js"></script>
 <script type="text/javascript" src="js-example-09--iterations.js"></script>
 <script type="text/javascript" src="js-example-10--conditionals.js"></script>
+<script type="text/javascript" src="js-example-11--fetch.js"></script>
 <script type="text/javascript" src="js-example-12--prototypes.js"></script>
 <script type="text/javascript" src="js-example-13--destructuring-assignment.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-umd-min.js"></script>-->
