--- a/project/sandbox/index.html
+++ b/project/sandbox/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <div id='viz'></div>
 <!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
-<script src="/static/libs/d3.v7.min.js"></script>
+<script src="/static/libs/d3.v7.8.5.min.js"></script>
 <script type="text/javascript" src="js-example-01.js"></script>
 <script type="text/javascript" src="js-example-02--using-d3.js"></script>
 <script type="module" src="js-example-03--module-imports.mjs"></script>
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js-example-12--prototypes.js"></script>
 <script type="text/javascript" src="js-example-13--destructuring-assignment.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-umd-min.js"></script>-->
-<script src="/static/libs/underscore-umd-min.js"></script>
+<script src="/static/libs/underscore-v1.13.6-umd-min.js"></script>
 <script type="text/javascript" src="js-example-14--underscore-lib.js"></script>
 <script type="text/javascript" src="js-example-15--functional-methods.js"></script>
 <script type="text/javascript" src="js-example-16--closures.js"></script>
