--- a/project/sandbox/d3-examples/example-3--insert/index.html
+++ b/project/sandbox/d3-examples/example-3--insert/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css"/>
 <body>
   <h2 id="title" style="font-family:sans-serif;">
-    D3 append() example
+    D3 insert() example
   </h2>
-  <div id='barchart'></div>
+  <div>
+    <ul id="silly-list">
+      <li id="item-1">First item</li>
+      <li id="item-2">Second item</li>
+      <li id="item-3">Third item</li>
+      <li id="item-4">Fourth item</li>
+    </ul>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
