--- a/project/sandbox/d3-examples/example-5--join/index.html
+++ b/project/sandbox/d3-examples/example-5--join/index.html
@@ -16,4 +16,4 @@
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
-<script src="script-1.js"></script>
+<script src="script.js"></script>
