--- a/project/sandbox/d3-viz/example-7--bar-chart/index.html
+++ b/project/sandbox/d3-viz/example-7--bar-chart/index.html
@@ -35,7 +35,7 @@
     D3 bar chart example
   </h2>
   <div id="barchart">
-    <!-- placeholder for the bartchart -->
+    <!-- placeholder for the barchart -->
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
