--- a/project/sandbox/d3-viz/example-1--select--selectAll/index.html
+++ b/project/sandbox/d3-viz/example-1--select--selectAll/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>D3 select() and selectAll() example</title>
+    <title>D3 select() and selectAll() examples</title>
     <style>
       .message {
         font-size: 13em;
