--- a/project/sandbox/d3-viz/example-7--barchart-with-join/index.html
+++ b/project/sandbox/d3-viz/example-7--barchart-with-join/index.html
@@ -32,7 +32,7 @@
 
 <body>
   <h2 id="title" style="font-family:sans-serif;">
-    D3 bar chart example
+    D3 barchart example with the join() method
   </h2>
   <div id="barchart">
     <!-- placeholder for the barchart -->
