--- a/project/sandbox/d3-viz/example-11--world-map-with-circular-indicators/index.html
+++ b/project/sandbox/d3-viz/example-11--world-map-with-circular-indicators/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="style.css" />
 <body>
   <h2 id="title" style="font-family: sans-serif">
-    D3 world map example with TopoJSON to GeoJSON and value
+    D3 world map example with TopoJSON to GeoJSON and circular
     indicators
   </h2>
   <div id="nobel-map">
