--- a/project/sandbox/svg-examples/page-7--svg-3--d3--circles.html
+++ b/project/sandbox/svg-examples/page-7--svg-3--d3--circles.html
@@ -9,5 +9,5 @@
     <svg id="chart"></svg>
     <!--<script src="http://d3js.org/d3.v7.min.js"></script>-->
     <script src="/static/libs/d3.v7.8.5.min.js"></script>
-    <script src="js-example-18--svg--d3--circles.js"></script>
+    <script src="d3--circles.js"></script>
 </body>
