--- a/project/nobel_viz/index.html
+++ b/project/nobel_viz/index.html
@@ -108,5 +108,5 @@
     <script src="../static/libs/topojson.v3.0.2.min.js"></script>
     <script src="../static/libs/crossfilter.v1.5.4.min.js"></script>
     <!-- THE MAIN JAVASCRIPT MODULE FOR OUR NOBEL ELEMENTS -->
-    <script src="static/mjs/nbviz_main.mjs" ></script>
+    <script src="static/js/nbviz_main.mjs" ></script>
 </body>
