--- a/project/sandbox/d3-viz/example-12--web-gui/index.html
+++ b/project/sandbox/d3-viz/example-12--web-gui/index.html
@@ -1,29 +1,9 @@
 <!doctype html>
-<meta charset="utf-8" />
-<link
-  rel="stylesheet"
-  href="css/style.css"
-  type=""
-  media="screen"
-/>
-<link
-  rel="stylesheet"
-  href="css/nobel-menu.css"
-  type=""
-  media="screen"
-/>
-<link
-  rel="stylesheet"
-  href="css/nobel-list.css"
-  type=""
-  media="screen"
-/>
-<link
-  rel="stylesheet"
-  href="css/nobel-winner.css"
-  type=""
-  media="screen"
-/>
+<meta charset="utf-8"/>
+<link rel="stylesheet" href="css/style.css"/>
+<link rel="stylesheet" href="css/nobel-menu.css"/>
+<link rel="stylesheet" href="css/nobel-list.css"/>
+<link rel="stylesheet" href="css/nobel-winner.css"/>
 <body>
   <h2 id="title" style="font-family: sans-serif">
     Web GUI example with D3 and Crossfilter2
