--- a/project/final_viz/index.html
+++ b/project/final_viz/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Visualizing the Nobel Prize</title>
-<!-- 1. IMPORT THE visualization'S CSS STYLING -->
-<link rel="stylesheet" href="static/css/style.css" media="screen"/>
+<title>
+    Visualizing the Nobel Prize
+</title>
+<!-- 1. IMPORT THE visualization's CSS STYLING -->
+<link rel="stylesheet" href="static/css/style.css" media="screen" />
 <body>
     <div id='chart'>
         <!-- 2. A HEADER WITH TITLE AND SOME EXPLANATORY INFO -->
         <div id='title'>Visualizing the Nobel Prize</div>
         <div id="info">
-            This is a companion piece to the 
-            book <a href='http://https://amzn.eu/d/ekAkAAb'>            
-            Data visualization with Python and JavaScript</a>, in which
-            its construction is detailed. The data used was scraped
-            Wikipedia using the <a href='https://en.wikipedia.org/wiki/List_of_Nobel_laureates_by_country'>
-            list of winners by country</a> as a starting point.
+            This is a companion piece to the book
+            <a href='https://amzn.eu/d/fL8q7ee'>"Data visualization with Python and JavaScript"</a>,
+            in which its construction is detailed. The data used was scraped Wikipedia using the
+            <a href='https://en.wikipedia.org/wiki/List_of_Nobel_laureates_by_country'>list of winners by country</a>
+            as a starting point. The accompanying Github repo is
+            <a href="https://github.com/Kyrand/dataviz-with-python-and-js-ed-2" >here</a>.
         </div>
         <!-- 3. THE PLACEHOLDERS FOR OUR VISUAL COMPONENTS -->
         <div id="nbviz">
@@ -50,7 +52,7 @@
             <!-- END MENU BAR -->
             <!-- BEGIN NOBEL-VIZ COMPONENTS -->
             <div id='chart-holder' class='_dev'>
-                <!-- TIME LINE OF PRIZES -->
+                <!-- TIMELINE OF PRIZES -->
                 <div id="nobel-time"></div>
                 <!-- MAP AND TOOLTIP -->
                 <div id="nobel-map">
@@ -75,7 +77,7 @@
                 </div>
                 <!-- BIOGRAPHY BOX -->
                 <div id="nobel-winner">
-                    <div id="picbox"></div>
+                    <div id="picbox"><img /></div>
                     <div id='winner-title'></div>
                     <div id='infobox'>
                         <div class='property'>
@@ -104,9 +106,9 @@
     </div>
     <!-- 4. THE JAVASCRIPT FILES -->
     <!-- THIRD-PARTY JAVASCRIPT LIBRARIES, MAINLY D3 -->
-    <script src="../static/libs/d3.v7.8.5.min.js"></script>
-    <script src="../static/libs/topojson.v3.0.2.min.js"></script>
-    <script src="../static/libs/crossfilter.v1.5.4.min.js"></script>
+    <script src="../static/libs/d3.min.js"></script>
+    <script src="../static/libs/topojson.min.js"></script>
+    <script src="../static/libs/crossfilter.min.js"></script>
     <!-- THE MAIN JAVASCRIPT MODULE FOR OUR NOBEL ELEMENTS -->
-    <script src="static/js/nbviz_main.mjs" ></script>
+    <script type="module" src="static/js/nbviz_main.mjs" ></script>
 </body>
