--- a/project/sandbox/d3-viz/example-11--world-map-with-circular-indicators/index.html
+++ b/project/sandbox/d3-viz/example-11--world-map-with-circular-indicators/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="style.css">
 <body>
   <h2 id="title" style="font-family: sans-serif">
     D3 world map example with TopoJSON to GeoJSON and circular
