--- a/project/sandbox/page-examples/page-1.html
+++ b/project/sandbox/page-examples/page-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style-1.css" type="text/css"/>
+<link rel="stylesheet" href="style-1.css" type="text/css">
 <!--<style>-->
 <!--    #my-viz { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }-->
 <!--    #lead { font-size: 150%; }-->
