--- a/project/sandbox/page-examples/page-2.html
+++ b/project/sandbox/page-examples/page-2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style-2.css" type="text/css"/>
+<link rel="stylesheet" href="style-2.css" type="text/css">
 <body>
     <div id="chart-holder" class="dev">
         <div id="header">
