--- a/project/sandbox/static-viz/index.html
+++ b/project/sandbox/static-viz/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css" type="text/css"/>
+<link rel="stylesheet" href="style.css" type="text/css">
 <body>
     <div class="main">
         <h1 class='title'>The Nobel Prize</h1>
