--- a/project/sandbox/d3-viz/example-02--append/index.html
+++ b/project/sandbox/d3-viz/example-02--append/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="style.css">
 <body>
   <h2 id="title" style="font-family:sans-serif;">
     D3 append() example
