--- a/project/sandbox/flex-examples/flex-01-11.html
+++ b/project/sandbox/flex-examples/flex-01-11.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style-13--flex-11--align-items--center.css" type="text/css"/>
+<link rel="stylesheet" href="style-13--flex-11--align-items--center.css" type="text/css">
 <body>
     <div class="container" id="top-container">
         <div class="box" id="box1">box 1</div>
