--- a/project/final_viz/index.html
+++ b/project/final_viz/index.html
@@ -4,7 +4,7 @@
     Visualizing the Nobel Prize
 </title>
 <!-- 1. IMPORT THE visualization's CSS STYLING -->
-<link rel="stylesheet" href="static/css/style.css" media="screen" />
+<link rel="stylesheet" href="static/css/style.css" media="screen">
 <body>
     <div id='chart'>
         <!-- 2. A HEADER WITH TITLE AND SOME EXPLANATORY INFO -->
