--- a/project/sandbox/d3-viz/example-12--web-gui/index.html
+++ b/project/sandbox/d3-viz/example-12--web-gui/index.html
@@ -29,18 +29,11 @@
       <div id="metric-radio">
         Colored by Categories:&nbsp;
         <form>
-          <label
-            >yes
-            <input
-              type="radio"
-              name="mode"
-              value="0"
-              checked
-            />
+          <label>yes
+            <input type="radio" name="mode" value="0" checked>
           </label>
-          <label
-            >no
-            <input type="radio" name="mode" value="1" />
+          <label>no
+            <input type="radio" name="mode" value="1">
           </label>
         </form>
       </div>
